# First-person-shooter

./: .gitignore  .gitmodules  CMakeLists.txt
client/: CMakeLists.txt  client_controller.h  client_message_executor.h  main.cpp
common/: shooter_protocol.h  signal_sender.h
server/: CMakeLists.txt  icontroller.h  local_controller.h  main.cpp  net_controller.h  olcPixelGameEngine.cpp  server_message_executor.h  shooter.cpp  shooter.h
